[package]
name = "tiny_captcha"
version = "0.1.4"
edition = "2021"
license = "Apache-2.0"
description = "rust version tiny captcha"
repository = "https://github.com/rmw-link/tiny_captcha"
readme = "README.md"
keywords = ["captcha"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gif = "0.11.3"
rand = { version = "0.8.5", features = ["min_const_gen"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.7", features = ["js"] }

[dev-dependencies]
anyhow = "1.0.58"
